# xin_livecaster

./: AUTHORS  CMakeLists.txt  Makefile  README  playerRPC.lsl
cmake/: FindGSTRtspServer.cmake
src/: CMakeLists.txt  live.h  live_camera.c  live_camera.h  live_vnc.c  live_vnc.h  vnc_caster.c  webcam_caster.c  webcam_caster.h
