PROJECT(rtspcaster)


#INCLUDE(UsePkgConfig)

#PKGCONFIG(gstreamer-rtsp-0.10 NOT_USED NOT_USED CMAKE_LINK_FLAGS CMAKE_C_FLAGS)
FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(PKG_GSTREAMER REQUIRED gstreamer-0.10)
#IF(PKGCONFIG_FOUND)
#	IF(CMAKE_PKGCONFIG_C_FLAGS)
#		SET(CMAKE_C_FLAGS "${CMAKE_PKGCONFIG_C_FLAGS} ${CMAKE_C_FLAGS}")
#		#do something with ${PKGCONFIG_LIBRARIES}
#	ENDIF(CMAKE_PKGCONFIG_C_FLAGS)
#ELSE(PKGCONFIG_FOUND)
#	MESSAGE("Cannot find gstreamer version 0.10 or above")
#ENDIF(PKGCONFIG_FOUND)

#FIND_PATH(GSTREAMER_INCLUDE_DIR gst/gst.h
#	PATHS
#	${PKG_GSTREAMER_INCLUDE_DIRS}
#	)

#FIND_LIBRARY(GSTREAMER_LIBRARIES NAMES gstreamer-0.10
#	PATHS
#	${PKG_GSTREAMER_LIBRARY_DIRS}
#	)

INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIR})
#IF (GSTREAMER_INCLUDE_DIR)
#	MESSAGE(STATUS "DEBUG: Found GStreamer include dir: ${GSTREAMER_INCLUDE_DIR}")
#ELSE (GSTREAMER_INCLUDE_DIR)
#	MESSAGE(STATUS "GStreamer: WARNING: include dir not found")
#ENDIF (GSTREAMER_INCLUDE_DIR)

#IF (GSTREAMER_LIBRARIES)
#	MESSAGE(STATUS "DEBUG: Found GStreamer library: ${GSTREAMER_LIBRARIES}")
#ELSE (GSTREAMER_LIBRARIES)
#	MESSAGE(STATUS "GStreamer: WARNING: library not found")
#ENDIF (GSTREAMER_LIBRARIES)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(webcam_caster ${DIR_SRCS})
